cabal-version:       2.2
name:                prometheus-spec
version:             0.3.0.0
synopsis:            Tracking of system metrics
description:
  This library lets you defined and track system metrics.
homepage:            https://github.com/awjchen/prometheus-spec
bug-reports:         https://github.com/awjchen/prometheus-spec/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Johan Tibell, Alex Chen
maintainer:          Alex Chen <awchen@fastmail.com>
category:            System
build-type:          Simple
extra-source-files:  CHANGES.md
tested-with:         GHC == 9.2.8

common common-all
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  default-language: Haskell2010

common library-build-depends
  build-depends:
    base >= 4.6 && < 4.19,
    bytestring >= 0.10.12.0 && < 0.12.0.0,
    atomic-primops ^>= 0.8.4,
    containers >= 0.5 && < 0.7,
    primitive >= 0.7.1.0 && < 0.9,
    text >= 1.2 && < 2.1,
    unordered-containers < 0.3

library
  import: common-all, library-build-depends

  exposed-modules:
    System.Metrics.Prometheus
    System.Metrics.Prometheus.Counter
    System.Metrics.Prometheus.CounterVector
    System.Metrics.Prometheus.Export
    System.Metrics.Prometheus.Gauge
    System.Metrics.Prometheus.GaugeVector
    System.Metrics.Prometheus.Histogram
    System.Metrics.Prometheus.HistogramVector
    System.Metrics.Prometheus.Internal.Map2
    System.Metrics.Prometheus.Internal.Sample
    System.Metrics.Prometheus.Internal.State
    System.Metrics.Prometheus.Internal.Store
    System.Metrics.Prometheus.Validation

  other-modules:
    Data.Array
    Data.Atomic
    System.Metrics.Prometheus.Example
    System.Metrics.Prometheus.GroupExample
    System.Metrics.Prometheus.SimpleExample
    System.Metrics.Prometheus.ThreadId
    System.Metrics.Prometheus.MetricVector

library prometheus-spec-benchmark
  import: common-all
  hs-source-dirs: benchmark-lib
  exposed-modules:
    Tasks
  build-depends:
    base,
    prometheus-spec

benchmark counter
  import: common-all
  main-is: Counter.hs
  type: exitcode-stdio-1.0
  build-depends:
    base,
    prometheus-spec,
    prometheus-spec-benchmark,
    criterion ^>= 1.5.9.0
  hs-source-dirs: benchmark-exe
  ghc-options: -O2 -threaded

test-suite prometheus-spec-test
  import: common-all
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    Counter
    Export
    State
    Store
    Validation
    VectorMetrics
  build-depends:
    base,
    prometheus-spec,
    prometheus-spec-benchmark,
    async ^>= 2.2.1,
    bytestring,
    containers,
    hspec ^>= 2.8.2,
    hspec-expectations ^>= 0.8.2,
    hspec-smallcheck ^>= 0.5.2,
    HUnit ^>= 1.6.2.0,
    QuickCheck ^>= 2.14.2,
    smallcheck ^>= 1.2.1,
    text,
    unordered-containers
  ghc-options: -O2 -threaded -with-rtsopts=-N

test-suite prometheus-spec-tutorial
  import: common-all, library-build-depends
  type: exitcode-stdio-1.0
  main-is: Tutorial.lhs
  build-depends:
    prometheus-spec,
    prometheus-spec-benchmark,
    markdown-unlit
  ghc-options:
    -pgmL markdown-unlit
    -O0
    -fno-ignore-asserts
  build-tool-depends: markdown-unlit:markdown-unlit

source-repository head
  type:     git
  location: https://github.com/awjchen/prometheus-spec.git
